--- a/views/account/favoritos.pug
+++ b/views/account/favoritos.pug
@@ -1,61 +1,22 @@
-extends ../layout
+extends conta-layout
 
-block content
-    .container
-        .row
-            .col-.col-md-4
-                ul.list-group
-                    a(href="/minhaconta" class="list-group-item list-group-item-action")
-                        img(src="/images/svg/user.svg" alt="Meus dados" width="20")
-                        span  Meus dados
-                    a(href="/minhaconta/compras" class="list-group-item list-group-item-action")
-                        img(src="/images/svg/pay.svg" alt="Minhas compras" width="20")
-                        span  Minhas compras
-                    a(href="/carrinho" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center")
-                        .wrapper-menu-cart
-                            img(src="/images/svg/cart.svg" alt="Meu carrinho" width="20")
-                            span  Meu carrinho
-                        if cart
-                            if cart.products.length === 0
-                                span.badge.badge-secondary.badge-pill 0
-                            else
-                                span.badge.badge-secondary.badge-pill= cart.totalQty
-                        else
-                            span.badge.badge-secondary.badge-pill 0
-                    a(href="/favoritos" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center active")
-                        .wrapper-menu-cart
-                            img(src="/images/svg/heart.svg" alt="Meus favoritos" width="20")
-                            span  Meus favoritos
-                        if favorites
-                            if favorites.qty === 0
-                                span.badge.badge-secondary.badge-pill 0
-                            else
-                                span.badge.badge-secondary.badge-pill= favorites.qty
-                        else
-                            span.badge.badge-secondary.badge-pill 0
-                    a(href="#" class="list-group-item list-group-item-action")
-                        img(src="/images/svg/password.svg" alt="Privacidade" width="20")
-                        span  Privacidade
-                    a(href="/autenticacao/logout" class="list-group-item list-group-item-action")
-                        img(src="/images/svg/logout.svg" alt="Sair" width="20")
-                        span  Sair
-            .minha-conta-content.col-.col-md-8.mt-4.mt-sm-0
-                .row.border.rounded.bg-white
-                    .col.p-1.p-md-4
-                        h2 Meus favoritos:
-                        if favorites
-                            ul.list-group
-                                each product in favorites.products
-                                    li.list-group-item.d-flex.align-items-center.justify-content-between
-                                        .col-10
-                                            a(href=product.url class="stretched-link")
-                                            img(src=product.image_path alt=product.name width="20")
-                                            span.pl-2= product.name
-                                        .col-2
-                                            a(href=`/favoritos/remover-dos-favoritos/${product.id}` class="btn btn-danger btn-sm") Excluir
-                        else
-                            .row.row-cols-1
-                                .col.d-flex.justify-content-center.pb-3
-                                    img(src="/images/svg/empty_cart.svg", alt="Nenhum item no carrinho" width="280px" class="img-responsive")
-                                .col
-                                    p.text-center Você ainda não tem nenhum item na lista de desejos. Bora incluir alguns itens?
+block conta
+    .col.p-1.p-md-4
+        h3 Meus favoritos:
+        hr
+        if favorites
+            ul.list-group
+                each product in favorites.products
+                    li.list-group-item.d-flex.align-items-center.justify-content-between
+                        .col-10
+                            a(href=product.url class="stretched-link")
+                            img(src=product.image_path alt=product.name width="20")
+                            span.pl-2= product.name
+                        .col-2
+                            a(href=`/favoritos/remover-dos-favoritos/${product.id}` class="btn btn-danger btn-sm") Excluir
+        else
+            .row.row-cols-1
+                .col.d-flex.justify-content-center.pb-3
+                    img(src="/images/svg/empty_cart.svg", alt="Nenhum item no carrinho" width="280px" class="img-responsive")
+                .col
+                    p.text-center Você ainda não tem nenhum item na lista de desejos. Bora incluir alguns itens?
