--- a/views/account/minhas-compras.pug
+++ b/views/account/minhas-compras.pug
@@ -1,50 +1,11 @@
-extends ../layout
+extends conta-layout
 
-block content
-    .container
-        .row
-            .col-.col-md-4
-                ul.list-group
-                    a(href="/minhaconta" class="list-group-item list-group-item-action")
-                        img(src="/images/svg/user.svg" alt="Meus dados" width="20")
-                        span  Meus dados
-                    a(href="/minhaconta/compras" class="list-group-item list-group-item-action active")
-                        img(src="/images/svg/pay.svg" alt="Minhas compras" width="20")
-                        span  Minhas compras
-                    a(href="/carrinho" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center")
-                        .wrapper-menu-cart
-                            img(src="/images/svg/cart.svg" alt="Meu carrinho" width="20")
-                            span  Meu carrinho
-                        if cart
-                            if cart.products.length === 0
-                                span.badge.badge-secondary.badge-pill 0
-                            else
-                                span.badge.badge-secondary.badge-pill= cart.totalQty
-                        else
-                            span.badge.badge-secondary.badge-pill 0
-                    a(href="/favoritos" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center")
-                        .wrapper-menu-cart
-                            img(src="/images/svg/heart.svg" alt="Meus favoritos" width="20")
-                            span  Meus favoritos
-                        if favorites
-                            if favorites.qty === 0
-                                span.badge.badge-secondary.badge-pill 0
-                            else
-                                span.badge.badge-secondary.badge-pill= favorites.qty
-                        else
-                            span.badge.badge-secondary.badge-pill 0
-                    a(href="#" class="list-group-item list-group-item-action")
-                        img(src="/images/svg/password.svg" alt="Privacidade" width="20")
-                        span  Privacidade
-                    a(href="/autenticacao/logout" class="list-group-item list-group-item-action")
-                        img(src="/images/svg/logout.svg" alt="Sair" width="20")
-                        span  Sair
-            .minha-conta-content.col-.col-md-8.mt-4.mt-sm-0
-                .row.border.rounded.bg-white
-                    .col.p-1.p-md-4
-                        h2 Minhas compras:
-                        .row.row-cols-1
-                                .col.d-flex.justify-content-center.pb-3
-                                    img(src="/images/svg/empty_cart.svg", alt="Nenhum item no carrinho" width="280px" class="img-responsive")
-                                .col
-                                    p.text-center Você ainda não realizou nenhuma compra.
+block conta
+    .col.p-1.p-md-4
+        h3 Minhas compras:
+        hr
+        .row.row-cols-1
+                .col.d-flex.justify-content-center.pb-3
+                    img(src="/images/svg/empty_cart.svg", alt="Nenhum item no carrinho" width="280px" class="img-responsive")
+                .col
+                    p.text-center Você ainda não realizou nenhuma compra.
