--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -114,9 +114,9 @@ body {
       transform: rotate(45deg); }
 
 .header {
-  background: none; }
+  background: #30336b; }
   .header h1 {
-    color: #4834d4;
+    color: white;
     font-weight: 900;
     letter-spacing: 10px; }
   .header .menu-conta {
@@ -127,7 +127,18 @@ body {
       margin: 0; }
       .header .menu-conta ul li {
         display: inline;
-        padding: 0px 10px 0px 10px; }
+        padding: 0px 10px 0px 10px;
+        color: white; }
+        .header .menu-conta ul li a {
+          overflow: hidden;
+          text-decoration: none;
+          border-top: 2px solid #30336b;
+          color: #dbdbf1;
+          padding: 8px;
+          transition: all 0.3s; }
+          .header .menu-conta ul li a:hover {
+            text-orientation: sideways-right;
+            border-top: 2px solid #686de0; }
 
 .navegacao {
   display: block;
@@ -135,7 +146,7 @@ body {
   position: sticky;
   top: 0;
   z-index: 3;
-  background-color: #4834d4;
+  background-color: #130f40;
   padding: 15px; }
   .navegacao .container .nav-section {
     display: flex;
@@ -299,7 +310,7 @@ footer {
   left: 0;
   height: 200px;
   width: 100%;
-  background-color: #4834d4;
+  background-color: #130f40;
   display: flex;
   align-items: center;
   justify-content: center;
