exclusão de logs e mudança no caminho das imagens

--- a/views/index.pug
+++ b/views/index.pug
@@ -23,10 +23,10 @@ block content
 							if cart
 								if product.id in cart.products
 									a(href=`/carrinho/adicionar-ao-carrinho/${product.id}` title="Adicionar mais ao carrinho" class="carrinho-product p-2 rounded-left")
-										img(src="public/images/svg/cart.svg", alt="Carrinho de compras" width=25)
+										img(src="/images/svg/cart.svg", alt="Carrinho de compras" width=25)
 								else
 									a(href=`/carrinho/adicionar-ao-carrinho/${product.id}` title="Adicionar ao meu carrinho" class="carrinho-product p-2 rounded-left")
-										img(src="public/images/svg/cart.svg", alt="Carrinho de compras" width=25)
+										img(src="/images/svg/cart.svg", alt="Carrinho de compras" width=25)
 							else
 								a(href=`/carrinho/adicionar-ao-carrinho/${product.id}` title="Adicionar ao meu carrinho" class="carrinho-product p-2 rounded-left")
 									img(src="/images/svg/cart.svg", alt="Carrinho de compras" width=25)
@@ -41,7 +41,7 @@ block content
 								a(href=`/favoritos/adicionar-aos-favoritos/${product.id}` title="Adicionar aos meus favoritos" class="favoritos-product p-2 rounded-right")
 									img(src="/images/svg/heart.svg", alt="Meus favoritos" width=25)
 						span.percentage-off #{product.discount}% OFF
-						img(src=product.image_path loading="lazy" class="card-img-top" alt=product.name class="img-product")
+						img(src="/public/"+product.image_path loading="lazy" class="card-img-top" alt=product.name class="img-product")
 						.card-body
 							h5.card-title= product.name
 							p.card-text Por Apenas 
