debugging debug debugging the debug

--- a/views/index.pug
+++ b/views/index.pug
@@ -41,7 +41,7 @@ block content
 								a(href=`/favoritos/adicionar-aos-favoritos/${product.id}` title="Adicionar aos meus favoritos" class="favoritos-product p-2 rounded-right")
 									img(src="/images/svg/heart.svg", alt="Meus favoritos" width=25)
 						span.percentage-off #{product.discount}% OFF
-						img(src=product.image_path loading="lazy" class="card-img-top" alt=product.name class="img-product")
+						img(src="/images/produtos/xiaomi/Xiaomi-Mi-CC9-Pro.webp" loading="lazy" class="card-img-top" alt=product.name class="img-product")
 						.card-body
 							h5.card-title=".."+product.name
 							p.card-text Por Apenas 
