substitui cdn do vue pelo link de produção

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -150,7 +150,7 @@ html(lang="pt-BR")
 				| &copy;2020 - Minha Loja
 	
 		script(src="https://unpkg.com/axios/dist/axios.min.js")
-		script(src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js")
+		script(src="https://cdn.jsdelivr.net/npm/vue@2.6.11")
 		script(src="/javascripts/script.js")
 		block javascript
 			
